--- a/exercise-3/Exercise-3.ipynb
+++ b/exercise-3/Exercise-3.ipynb
@@ -79,12 +79,12 @@
     "\n",
     "**What does this modulus operator achieve? How did you figure this out?**    \n",
     "\n",
-    "[your answer here]\n",
+    "[Modulo - remainder of integer division]\n",
     "\n",
     "\n",
     "**Briefly describe a scenario in which this might be useful.**  \n",
     "\n",
-    "[your answer here]\n"
+    "[finding the remainder]\n"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "execution_count": 92,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
