--- a/exercise-3/Exercise-3-hw.ipynb
+++ b/exercise-3/Exercise-3-hw.ipynb
@@ -136,11 +136,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def "
+    "import random\n",
+    "def rps():\n",
+    "    print(\"You are playing Rock Paper Scissors\")\n",
+    "    comp_possible = 1,2,3\n",
+    "    score = [0,0]\n",
+    "    flag = 0\n",
+    "    while True:\n",
+    "        print (\"Enter your choice:\")\n",
+    "        while True:\n",
+    "            choice = input('->')\n",
+    "            if choice == 'Rock':\n",
+    "                choice_identifier = 1\n",
+    "                break\n",
+    "            elif choice == 'Scissors':\n",
+    "                choice_identifier = 2\n",
+    "                break\n",
+    "            elif choice == 'Paper':\n",
+    "                choice_identifier = 3\n",
+    "                break\n",
+    "            else:\n",
+    "                print('That's not an option in this game!)\n",
+    "                print(Try again!)\n",
+    "                continue\n",
+    "                \n",
+    "    comp_choice = random.choice(comp_possible)\n",
+    "    if choice_identifier == comp_choice:\n",
+    "        print(Tie!)\n",
+    "        score[0] = score [0] + 1\n",
+    "        score[1] = score[1] + 1\n",
+    "    elif ()"
    ]
   }
  ],
