adding rock paper scissors game

--- a/exercise-3/Exercise-3-hw.ipynb
+++ b/exercise-3/Exercise-3-hw.ipynb
@@ -136,41 +136,72 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your move: Rock, Paper, or Scissors?Rock\n",
+      "The computer chose Scissors\n",
+      "Player wins\n",
+      "What is your move: Rock, Paper, or Scissors?Paper\n",
+      "The computer chose Scissors\n",
+      "Computer wins\n",
+      "What is your move: Rock, Paper, or Scissors?Paper\n",
+      "The computer chose Rock\n",
+      "Player wins\n",
+      "What is your move: Rock, Paper, or Scissors?\n",
+      "The computer chose Paper\n",
+      "What is your move: Rock, Paper, or Scissors?\n",
+      "The computer chose Rock\n",
+      "What is your move: Rock, Paper, or Scissors?\n",
+      "The computer chose Rock\n",
+      "What is your move: Rock, Paper, or Scissors?\n",
+      "The computer chose Paper\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
-    "def rps():\n",
-    "    print(\"You are playing Rock Paper Scissors\")\n",
-    "    comp_possible = 1,2,3\n",
-    "    score = [0,0]\n",
-    "    flag = 0\n",
-    "    while True:\n",
-    "        print (\"Enter your choice:\")\n",
-    "        while True:\n",
-    "            choice = input('->')\n",
-    "            if choice == 'Rock':\n",
-    "                choice_identifier = 1\n",
-    "                break\n",
-    "            elif choice == 'Scissors':\n",
-    "                choice_identifier = 2\n",
-    "                break\n",
-    "            elif choice == 'Paper':\n",
-    "                choice_identifier = 3\n",
-    "                break\n",
-    "            else:\n",
-    "                print('That's not an option in this game!)\n",
-    "                print(Try again!)\n",
-    "                continue\n",
-    "                \n",
-    "    comp_choice = random.choice(comp_possible)\n",
-    "    if choice_identifier == comp_choice:\n",
-    "        print(Tie!)\n",
-    "        score[0] = score [0] + 1\n",
-    "        score[1] = score[1] + 1\n",
-    "    elif ()"
+    "moves = [\"Rock\", \"Paper\", \"Scissors\"]\n",
+    "keep_playing = \"true\"\n",
+    "while keep_playing == \"true\":\n",
+    "    cmove = random.choice(moves)\n",
+    "    pmove = input(\"What is your move: Rock, Paper, or Scissors?\")\n",
+    "    print (\"The computer chose\",cmove)\n",
+    "    if cmove == pmove:\n",
+    "        print (\"Tie!\")\n",
+    "    elif pmove == \"Rock\" and cmove == \"Scissors\":\n",
+    "        print (\"Player wins\")\n",
+    "    elif pmove == \"Rock\" and cmove == \"Paper\":\n",
+    "        print (\"Computer wins\")\n",
+    "    elif pmove == \"Rock\" and cmove == \"Rock\":\n",
+    "        print (\"Tie!\")\n",
+    "    elif pmove == \"Paper\" and cmove == \"Scissors\":\n",
+    "        print (\"Computer wins\")\n",
+    "    elif pmove == \"Paper\" and cmove == \"Paper\":\n",
+    "        print (\"Tie!\")\n",
+    "    elif pmove == \"Paper\" and cmove == \"Rock\":\n",
+    "        print (\"Player wins\")\n",
+    "    elif pmove == \"Scissors\" and cmove == \"Scissors\":\n",
+    "        print (\"Tie!\")\n",
+    "    elif pmove == \"Scissors\" and cmove == \"Paper\":\n",
+    "        print (\"Player wins\")\n",
+    "    elif pmove == \"Scissors\" and cmove == \"Rock\":\n",
+    "        print (\"Computer wins\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
