--- a/exercise-4/exercise-4-hw.ipynb
+++ b/exercise-4/exercise-4-hw.ipynb
@@ -99,6 +99,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def fact_or_sum(a):\n",
+    "    if (type(a) == str):\n",
+    "        print(\"You have an error\")\n",
+    "    elif (a == 0):\n",
+    "        print(a)\n",
+    "    elif (a%2 != 0):\n",
+    "        n = 1\n",
+    "        for r in (range(a, 0, -1)):\n",
+    "            n = n * r\n",
+    "        print(n)\n",
+    "    elif(a%2 == 0):\n",
+    "        f = 0\n",
+    "        while a> 0:\n",
+    "            f = f + a\n",
+    "            a = a - 1\n",
+    "        print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact_or_sum(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have an error\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact_or_sum(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
